--- a/docker/next/Dockerfile
+++ b/docker/next/Dockerfile
@@ -2,7 +2,7 @@ FROM node:18-alpine
 # ワーキングディレクトリの設定
 WORKDIR /next/src/app/
 
-# ホストPCの[./src]フォルダーを[/go/src/app/]フォルダーにコピー
+# ホストPCの[./src]フォルダーを[/next/src/app/]フォルダーにコピー
 ADD ./src .
 
 
